# pyvideotrans_xtts

./: .gitignore
pyvideotrans_cli/: README.md  pyproject.toml  requirements.txt
pyvideotrans_cli/src/pyvideotrans_cli/: __init__.py  cli.py  core.py  transcribe.py  translate.py  tts.py  video.py
pyvideotrans_cli/src/pyvideotrans_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
